# propellint

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake.yml  main.yml
include/propellint/: Buck.h  Matcher.h  Profile.h
src/: Buck.cpp  Profile.cpp  check_anomalies.cpp  local_benchmark.cpp
test/: MatcherTest.cpp
